2016-01-06  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* gsad.xsl, help.xsl, help_ru.xsl: Extend the copyright year to 2016.

2016-01-06  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/html/classic/help.xsl, src/html/classic/help_de.xsl,
	src/html/classic/help_ru.xsl, src/html/classic/help_zh_CN.xsl
	(mode="help" match="contents.html"): Removed unnecessary note.

2015-01-05  Matthew Mundell <matthew.mundell@greenbone.net>

	Allow the sysadmin to provide an alternate login image.

	* src/gsad_base.c (login_xml): Add ALTERNATE_LABEL flag to LOGIN_PAGE.

	* src/html/classic/gsad.xsl (login_box): If ALTERNATE_LABEL is not 0
	then use label.png instead of login-label.png.

2015-01-04  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/gsad_omp.c (get_config): Get credentials information.

	* src/html/classic/omp.xsl (preference-details, edit-config-preference):
	Handle osp_credential_username and osp_credential_password.

2015-01-04  Matthew Mundell <matthew.mundell@greenbone.net>

	Add version to login page header.  Add option --vendor-version, so that
	the user can override the version (in the header and on the About page).

	* src/gsad.c (request_handler): Add VERSION and VENDOR_VERSION to
	ENVELOPE.
	(main): Add --vendor-version.

	* src/gsad_base.c (vendor_version): New variable.
	(vendor_version_set, vendor_version_get): New function.
	(login_xml): Add VENDOR_VERSION to LOGIN_PAGE.

	* src/gsad_base.h: Add headers accordingly.

	* src/gsad_omp.c (xsl_transform_omp): Add VERSION and VENDOR_VERSION to
	ENVELOPE.

	* src/html/classic/gsad.xsl (login_page): Set header version from XML.
	(version, vendor_version): New dummy templates.

	* src/html/classic/help.xsl (help [about]): Set version from XML.

2015-01-04  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (create_report_omp, create_container_task_omp)
	(create_task_omp, move_task_omp, save_credential_omp)